[tool.poetry]
name = "public_zfromk"
version = "0.1.0"
description = ""
authors = ["Nikki Wood <woodenikki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
halo = "^0.0.31"
KalturaApiClient = "^17.12.0"
requests = "^2.26.0"
filetype = "^1.0.8"
colorama = "^0.4.4"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
